--- a/extractors/ENDPOINT/trendmicro-trendmicro-syslog_cef.yaml
+++ b/extractors/ENDPOINT/trendmicro-trendmicro-syslog_cef.yaml
@@ -30,6 +30,9 @@ event-details:
       annotate:
         EventName: Generic Trend-Micro Endpoint Event
         Stream: OTHER
+      translate: 
+        Header-5: EventName 
+        Header-6: Severity
 
   globals:
     translate: 
@@ -63,7 +66,6 @@ event-details:
       translate:
         dhost: DstHost
         cat: Category
-        VirusName: VirusName 
         filePath: FilePath
         fname: FileName
         dst: DstIP
@@ -74,11 +76,13 @@ event-details:
       annotate:
         EventName: Generic Trend-Micro Endpoint Event
         Stream: OTHER
+      translate: 
+        rt: SystemTstamp
 
   globals:
     translate: 
       rt: SystemTstamp
-      dvchost: SystemName
+      dvchost: System
       Header-5: Signature 
       Header-6: Severity   
 
@@ -101,7 +105,6 @@ event-details:
         filePath: FilePath
         dst: DstIP
         fileHash: FileHash
-        msg: Message
         duser: DstUser
         suser: SrcUser
         shost: SrcHost 
@@ -116,7 +119,6 @@ event-details:
         filePath: FilePath
         dst: DstIP
         fileHash: FileHash
-        msg: Message
         cat: Category
         duser: DstUser
         suser: SrcUser
@@ -126,11 +128,13 @@ event-details:
       annotate:
         EventName: Generic Trend-Micro Endpoint Event
         Stream: OTHER
+      translate: 
+        rt: SystemTstamp
 
   globals:
     translate: 
       rt: SystemTstamp
-      dvchost: SystemName 
+      dvchost: System
       Header-5: Signature 
       Header-6: Severity  
 
@@ -165,10 +169,12 @@ event-details:
       annotate:
         EventName: Generic Trend-Micro Endpoint Event
         Stream: OTHER
+      translate: 
+        rt: SystemTstamp
 
   globals:
     translate: 
-      dvchost: SystemName
+      dvchost: System
       rt: SystemTstamp
       Header-5: Signature 
       Header-6: Severity  
@@ -196,10 +202,12 @@ event-details:
       annotate:
         EventName: Generic Trend-Micro Endpoint Event
         Stream: OTHER
+      translate: 
+        rt: SystemTstamp
 
   globals:
     translate: 
-      dvchost: SystemName
+      dvchost: System
       rt: SystemTstamp 
       Header-5: Signature 
       Header-6: Severity     
